# clipboard

./: CMakeLists.txt  add_to_startup.h  readme.md  to_html.cpp  vcpkg-configuration.json  vcpkg.json  watch_clipboard.cpp  watch_clipboard.h
